Release notes for each version of nimbleAPT

1.0.3

-- Changed name to nimbleAPT (from nimble-snippets).
-- Updates for compatibility with changes in nimble.
-- Added vignette.


1.0.2

-- Edits to documentation.


1.0.1

-- Added demo.


1.0.0

-- Initial release of nimble-snippets (previous name of nimbleAPT).