@@ -1,3 +1,5 @@
 inst/doc
 .travis.yml
 .Rbuildignore
+doc
+Meta
