@@ -2,12 +2,12 @@
 title: "Getting started with nimbleAPT"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{my-vignette}
+  %\VignetteIndexEntry{Getting started with nimbleAPT}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
 
- 
+
 
 <!-- Add this vignette to the documentation via roxygen2::roxygenise() and  R CMD build -->
 
@@ -21,15 +21,15 @@ The principal motivation of this package is that, when target posterior distribu
 In these situations, standard algorithms often propose few, if any, jumps between modes, and can thus provide very poor approximations to target posterior distributions.
 The nimbleAPT package permits nimble users to perform adaptive parallel tempering (APT) as a potential solution for sampling multimodal posterior distributions.
 
-Parallel tempering is an MCMC technique 
+Parallel tempering is an MCMC technique
 where the posterior likelihood (of a Bayesian model) is 'heated', 'or tempered' to various degrees.
-As temperature is increased, likelihoods become flatter and this can increase the probability and frequency of between-mode jumps. 
-In practice, a "temperature ladder" (a ranked set of temperatures) is established, 
-MCMC is performed within each rung of the temperature ladder, 
+As temperature is increased, likelihoods become flatter and this can increase the probability and frequency of between-mode jumps.
+In practice, a "temperature ladder" (a ranked set of temperatures) is established,
+MCMC is performed within each rung of the temperature ladder,
 and a special between-rung MCMC step is introduced so that parameter sets can move up and down the temperature ladder.
 Bayesian inference is made on the posterior samples of the unheated rung only.
-Adaptive parallel tempering algorithms automaticly tune the temperatures of the temperature ladder 
-so that target acceptance rates for proposed between-rung jumps are achieved. 
+Adaptive parallel tempering algorithms automaticly tune the temperatures of the temperature ladder
+so that target acceptance rates for proposed between-rung jumps are achieved.
 
 The nimbleAPT package provides the following...
 
@@ -46,7 +46,7 @@ knitr::opts_chunk$set(
 
 # Toy example
 
-The following toy problem illustrates how classic MCMC algorithms can struggle to approximate multimodal posteriors. The true posterior distribution for centroids should have four modes, but as we will see, classic samplers can struggle to explore such a posterior distribution. 
+The following toy problem illustrates how classic MCMC algorithms can struggle to approximate multimodal posteriors. The true posterior distribution for centroids should have four modes, but as we will see, classic samplers can struggle to explore such a posterior distribution.
 
 First, we create a nimble model with a multimodal posterior. For this model there is no information in the data to remove uncertainty about the sign of the elements of centroids.
 
@@ -75,11 +75,11 @@ rModel <- nimbleModel(bugsCode,
 Now use the model to simulate some data and initialise/specify the model's data nodes.
 
 ```{r sim, fig.width=7, fig.height=7}
-simulate(rModel, "y") ## Use model to simulate data 
+simulate(rModel, "y") ## Use model to simulate data
 
 rModel <- nimbleModel(bugsCode,
                       constants=list(nObs=nObs, cholCov=covChol),
-                      data=list(y=rModel$y), 
+                      data=list(y=rModel$y),
                       inits=list(centroids=centroids))
 
 cModel <- compileNimble(rModel)
@@ -119,7 +119,7 @@ library(coda)      # Loads coda
 plot(as.mcmc(samples))
 ```
 
-As we can see, the default MCMC scheme makes few, if any, jumps between the four potential modes. 
+As we can see, the default MCMC scheme makes few, if any, jumps between the four potential modes.
 
 So let's try with adaptive parallel tempering (APT).
 
@@ -147,12 +147,11 @@ legend("topleft", legend=c("jumps", "samples"), col=c("black","red"), pch=c("_",
 
 plot(as.mcmc(samples))
 
+plot(as.mcmc(aptC$logProbs))
 
 ```
 
 We can see that jumps between nodes (black lines) are frequent and that each node has been sampled (red points).
-The precision with which the weight of each posterior mode is estimated can be increased by increasing 
-1. the number of rungs in the temperature ladder, and moreover 
-2. the number of iterations (niter). 
-
-
+The precision with which the weight of each posterior mode is estimated can be increased by increasing
+1. the number of rungs in the temperature ladder, and moreover
+2. the number of iterations (niter).
